# table-trace-rs

./: .env  .gitignore  Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/src/: lib.rs
core/analytics/: Cargo.toml
core/analytics/src/: core.rs
core/common/: Cargo.toml
core/common/src/: config.rs  error.rs  lib.rs  server.rs
modules/analytics/: Cargo.toml
modules/analytics/src/: handlers.rs  lib.rs  models.rs  routes.rs
